--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,5 +19,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: compilation
       run: |
+           cd source
            dotnet restore --use-current-runtime  
     
