--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,6 +19,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: compilation
       run: |
-           cd source
+           cd samples/aspnetapp/aspnetapp
            dotnet restore --use-current-runtime  
     
