--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,4 +25,7 @@ jobs:
       run: |
            cd samples/aspnetapp/aspnetapp
            dotnet build -c release
-    
+    - name: publish
+      run: |
+           cd samples/aspnetapp/aspnetapp
+           dotnet publish -c release -o samples/aspnetapp/aspnetapp/website
