--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,7 +28,7 @@ jobs:
     - name: publish
       run: |
            cd samples/aspnetapp/aspnetapp
-           dotnet publish -c release -o samples/aspnetapp/website
+           dotnet publish -c release -o website
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3
       with:
