--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,20 +13,20 @@ jobs:
 
     runs-on: ubuntu-latest
     container: 
-      image: rancher/dind:latest
+      image: mcr.microsoft/azurecli
 
     steps:
-    - uses: actions/checkout@v3
-    - name: install azcli
-      run: |
-        apt-get update
-        apt-get install ca-certificates curl apt-transport-https lsb-release gnupg
-        mkdir -p /etc/apt/keyrings
-        curl -sLS https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor | tee /etc/apt/keyrings/microsoft.gpg > /dev/null 
-        chmod go+r /etc/apt/keyrings/microsoft.gpg
-        apt-get update
-        apt-get install azure-cli
+    - uses: actions/checkout@v3           
     - name: az login
       run: |
         az login --service-principal -u ${{secrets.user}} -p ${{secrets.password}} -t "5461eb53-e0fd-4320-92ff-c6efe1fe91e9"    
-    
+    - name: install docker
+      run: |
+        apt-get update
+        apt-get install ca-certificates curl gnupg
+        install -m 0755 -d /etc/apt/keyrings
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg 
+        chmod a+r /etc/apt/keyrings/docker.gpg
+        echo "deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
+        apt-get update
+        apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
