--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,20 +13,15 @@ jobs:
 
     runs-on: ubuntu-latest
     container: 
-      image: mcr.microsoft.com/azure-cli
+      image: kirankumarsivapuarm/base_image:1.0
 
     steps:
     - uses: actions/checkout@v3           
     - name: az login
       run: |
         az login --service-principal -u ${{secrets.user}} -p ${{secrets.password}} -t "5461eb53-e0fd-4320-92ff-c6efe1fe91e9"    
-    - name: install docker
+    - name: build docker image
       run: |
-        apt-get update
-        apt-get install ca-certificates curl gnupg
-        install -m 0755 -d /etc/apt/keyrings
-        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg 
-        chmod a+r /etc/apt/keyrings/docker.gpg
-        echo "deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
-        apt-get update
-        apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+        cd ./samples/aspnetapp/
+        docker build . -t demo_image:v1.0
+        
