--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -52,8 +52,9 @@ jobs:
         az logout
         
     - name: push file into aks
+      shell: pwsh
       run: |
-        $BuildId= ${{github.run_id}}
+        $BuildId= "${{github.run_id}}"       
         $DOCKER_TAG=Get-Date -Format "MM-dd-yyyy_$BuildId"
         sed -i $#DOCKER_TAG#$DOCKER_TAG ./docker/deployment.yaml
         cat ./docker/deployment.yaml
