--- a/docker/deployment.yaml
+++ b/docker/deployment.yaml
@@ -1,3 +1,9 @@
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: lobpoc
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -10,13 +16,68 @@ spec:
   selector:
     matchLabels:
       app: nginx
+      app.kubernetes.io/name: microservice1
   template:
     metadata:
       labels:
         app: nginx
+        app.kubernetes.io/name: microservice1
     spec:
       containers:
-      - name: nginx
+      - name: microservice1
         image: testacrpoc08112023.azurecr.io/demo_image:DOCKER_TAG
         ports:
         - containerPort: 8100
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service-one
+  namespace: lobpoc
+  labels:
+    app: nginx
+    app.kubernetes.io/name: microservice1
+spec:
+  ports:
+    - port: 9000
+      targerport: 8100
+      protocol: tcp
+  type: NodePort
+  selector:
+    app.kubernetes.io/name: microservice1
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: nginx-ingress-one
+  namespace: lobpoc
+  labels:
+    app: nginx
+    app.kubernetes.io/name: microservice1
+  annotations: 
+    alb.ingress.kubernetes.io/group.name: microservices-ingress-internal
+    alb.ingress.kubernetes.io/scheme: internal
+spec:
+  ingressClassName: alb
+  rules:
+    - http:
+        paths: 
+        - path: /home/page1
+          pathtype: Prefix
+          backend:
+            service:
+              name: nginx-service-two
+              port: 
+                number: 9000
+        - path: /home/page1
+          pathtype: Prefix
+          backend:
+            service:
+              name: nginx-service-storage
+              port: 
+                number: 9900
+
+    
+    
+
+
